Fixed display value vertical alignment

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
     box-sizing: inherit;
 }
 
-.calculator {
+#calculator {
     border: 1px solid #ccc;
     border-radius: 5px;
     position: absolute;
@@ -19,14 +19,16 @@ html {
     width: 400px;
 }
 
-.calculator-screen {
+#display {
+    display: flex;
+    justify-content: right;
+    align-items: center;
     width: 100%;
     font-size: 5rem;
     height: 80px;
     border: none;
     background-color: #252525;
     color: #fff;
-    text-align: right;
     padding-right: 20px;
     padding-left: 10px;
 }
@@ -72,7 +74,7 @@ button:hover {
     background-color: #4e9ed4;
 }
 
-.calculator-keys {
+#calculator-keys {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
